--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "e2e:cy:start-run-all-ci": "start-server-and-test start:ci http-get://localhost:4200 e2e:cy:run:all:ci",
     "generate:changelog": "ts-node ./scripts/changelog.ts",
     "generate:docs": "npx compodoc -p tsconfig.compodoc.json && ./scripts/zip-docs.sh",
+    "generate:publish:docs": "yarn generate:docs && yarn publish:docs",
     "generate:translations:ts-2-json": "ts-node ./scripts/generate-translations-ts-2-json",
     "generate:translations:ts-2-properties": "ts-node ./scripts/generate-translations-ts-2-properties",
     "generate:translations:properties-2-ts": "ts-node ./scripts/generate-translations-properties-2-ts && prettier './projects/assets/src/translations/**/*.ts' --write",
